	* Fix issue 253: Resolve lingering warnings in early Clang compilers and
	  enable -Wzero-as-null-pointer-constant when compiling unit tests with
	  GCC and Clang.

	* Fix issue 250: Warnings about zero argument variadic macros with
	  clang-msvc. Thanks u3shit for reporting and fixing.

	* Fix issue 251: trompeloeil::printer<> customization point now supports
	  SFINAE expressions to constrain partial specializations. Thank you
	  Christian Morales Vega for reporting.

	* Fix issue 245: Modify cmake to build thread_terror on Windows with MSVC.

	* Use CMake internal Threads::Threads target where needed

v41 2021-06-15

	* catch2 adapter works with CATCH_CONFIG_PREFIX_ALL.
	  thanks Christian Morales Vega

	* Silenced -Wreserved-identifier from Clang "latest" (13.0.0).

	* Silenced (again) the MSVC C4702 warning from the default_return<>()
	  function template.

	* Introduced type trompeloeil::printer<T> as a customization point or
	  formatting data to strings in reports. This has the advantage of
	  allowing partial specializations. The old technique of specializing
	  the function template trompeloeil::print(ostream&, const T&) still
	  works.

v40 2021-03-14

	* Silenced -Wnonnull warning from GCC 9 and newer. Thank you Tony Neubert.

	* Fixed custom reported documentation bug. Thanks Matt Godbolt.

	* Added CMake alias target trompeloeil::trompeloeil.
	  Thank you Leon De Andrade.

	* Documentation markdown fixes. Thank you offa.

	* Moved all CI builds to github actions. travis-ci and appveyor
	  are no longer used.

	* Moved CI coverage collection to codecov.io

	* Conan recipe is now on https://conan.io/center/trompeloeil
	  the old rollbear/stable channel is defunct. Thank you Florian Berchtold.

v39 2020-10-31

	* Fix issue 204: ALLOW_CALL was not respected in sequences.
	  Now ALLOW_CALL in sequence may be skipped, but making a
	  call out of sequence is a violation. NOTE! This fix is likely
	  to break some existing test code!
